fix in night mode code hard to read.

--- a/less/forum.less
+++ b/less/forum.less
@@ -8,7 +8,9 @@ div.container.buy-store-layer> div.Form {
 .buy-store-layer .Form-group {
   margin-bottom: 12px;
 }
+.get-invite-code-text{
 
+}
 .StorePage-results .Store-Body Button {
   margin-right: 10px;
 }
